compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__todo__with_message_expr.snap
---
source: compiler-core/src/javascript/tests/todo.rs
expression: "\npub fn go() {\n  let x = \"I should \" <> \"do this\"\n  todo as x\n}\n"
---
----- SOURCE CODE

pub fn go() {
  let x = "I should " <> "do this"
  todo as x
}


----- COMPILED JAVASCRIPT
import { makeError } from "../gleam.mjs";

const FILEPATH = "src/module.gleam";

export function go() {
  let x = "I should " + "do this";
  throw makeError("todo", FILEPATH, "my/mod", 4, "go", x, {})
}
