compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__todo__without_message.snap
---
source: compiler-core/src/javascript/tests/todo.rs
expression: "\npub fn go() {\n    todo\n}\n"
---
----- SOURCE CODE

pub fn go() {
    todo
}


----- COMPILED JAVASCRIPT
import { makeError } from "../gleam.mjs";

const FILEPATH = "src/module.gleam";

export function go() {
  throw makeError(
    "todo",
    FILEPATH,
    "my/mod",
    3,
    "go",
    "`todo` expression evaluated. This code has not yet been implemented.",
    {}
  )
}
