compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__todo__without_message_typescript.snap
---
source: compiler-core/src/javascript/tests/todo.rs
expression: "\npub fn go() {\n    todo\n}\n"
---
----- SOURCE CODE

pub fn go() {
    todo
}


----- TYPESCRIPT DEFINITIONS
export function go(): any;
